# autovul

./: .flake8  .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/workflows/: release.yml
artifact/: appendix.tex  usenix-2020-09.sty
autovul/: __init__.py
autovul/base/: __init__.py  attacks.py  datasets.py  defenses.py  environ.py  models.py  optim.py  trainer.py
autovul/base/configs/: __init__.py
autovul/base/utils/: environ.py  influence.py  lock.py  model.py  process.py  train.py
autovul/base/utils/fim/: kfac.py
autovul/vision/: __init__.py  environ.py  trainer.py
autovul/vision/attacks/: __init__.py
autovul/vision/attacks/adv/: __init__.py  pgd.py
autovul/vision/attacks/backdoor/: __init__.py  (+4 more)
autovul/vision/configs/: __init__.py
autovul/vision/datasets/: __init__.py  imagefolder.py  imageset.py
autovul/vision/marks/: __init__.py
autovul/vision/models/: __init__.py  imagemodel.py
autovul/vision/optim/: pgd.py  uname.py
autovul/vision/shortcut/: pgd.py
autovul/vision/utils/: __init__.py  sgm.py
bash/: adv_attack.sh  backdoor.sh  extraction.sh  grad_var.sh  membership.sh  mitigation_backdoor.sh  mitigation_extraction.sh  mitigation_train.sh  neuron_number.sh  poison.sh  train.sh
configs_example/base/: attack.yml  dataset.yml  model.yml  trainer.yml
docker/: cpu.dockerfile  gpu.dockerfile
examples/: adv_attack.py  adv_validate.py  backdoor_attack.py  backdoor_validate.py  test.py  train.py  validate.py
projects/: extraction_attack.py  generate_mitigation.py  grad_var.py  grad_var_param.py  membership.py
(+31 files in other folders)
