[metadata]
name = autovul
version = attr:autovul.version.__version__
description = minimum code implementation for our USENIX paper `On the Security Risks of AutoML`.
long_description = file:README.md
long_description_content_type = text/markdown
author = Ren Pang
author_email = rbp5354@psu.edu
license = GPL-3
classifier =
  Environment :: GPU :: NVIDIA CUDA :: 11.1
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Image Recognition
  Topic :: Software Development :: Libraries :: Python Modules
  Programming Language :: Python :: 3.9
keywords = 
  pytorch
  image classification
  automl

[options]
zip_safe = False
# include_package_data = True
packages = autovul
install_requires =
  torch>=1.10.0
  torchvision>=0.11.1
  numpy>=1.20.3
  matplotlib>=3.4.2
  pyyaml>=5.3.1
  tqdm>=4.54.1
  adversarial-robustness-toolbox
python_requires = >=3.9.6

[options.package_data]
* = *.yml
autovul = autovul/vision/data/*/*, autovul/vision/marks/*.png

[options.packages.find]
# where = src
include = autovul
exclude = 
  examples
  projects